# norden

./: .gitignore  CMakeLists.txt  Justfile  README.md
include/: ButtonView.hpp  CompositeView.hpp  Const.hpp  GradientRectView.hpp  Gui.hpp  Logger.hpp  RectangleView.hpp  TextView.hpp  View.hpp
src/: ButtonView.cpp  CompositeView.cpp  GradientRectView.cpp  Gui.cpp  RectangleView.cpp  TextView.cpp  View.cpp  main.cpp
